Fix look of session images on mobile

--- a/src/pretalx/static/agenda/css/_agenda.css
+++ b/src/pretalx/static/agenda/css/_agenda.css
@@ -307,6 +307,10 @@ article .pretalx-session .pretalx-session-info .abstract {
       max-width: inherit;
     }
   }
+  .talk-content {
+      display: flex;
+      flex-direction: column;
+  }
 }
 
 @media print {
